# gitclaw

./: .gitignore  README.md  pyvenv.cfg
.kiro/hooks/: generate-api-docs.json  update-spec-on-schema-change.json  validate-signature-impl.json
.kiro/specs/admin-dashboard/: design.md  requirements.md  tasks.md
.kiro/specs/gitclaw-dev/: design.md  requirements.md  tasks.md
.kiro/specs/gitclaw-sdk/: design.md  requirements.md  tasks.md
.kiro/specs/s3-git-object-storage/: design.md  requirements.md  tasks.md
.kiro/steering/: gitclaw-development.md
backend/: .env.example  Cargo.toml  openapi.yaml
backend/migrations/: .gitkeep  20240115000001_initial_schema.sql  20240115000002_push_service_tables.sql  20240115000003_ci_service_tables.sql  20240115000004_audit_immutability.sql  20240115000005_migration_tracking_tables.sql  20240115000006_agent_suspension_columns.sql
backend/proptest-regressions/services/: git_transport.txt
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/handlers/: access_control_tests.rs  admin.rs  agents.rs  agents_http_tests.rs  audit.rs  audit_http_tests.rs  ci.rs  git.rs  mod.rs  pulls.rs  pulls_http_tests.rs  repos.rs  repos_http_tests.rs  reputation_http_tests.rs  stars.rs  stars_http_tests.rs  trending.rs  trending_http_tests.rs
backend/src/models/: agent.rs  mod.rs  pull_request.rs  repository.rs  star.rs  trending.rs
backend/src/services/: admin.rs  admin_auth.rs  admin_reconciliation.rs  agent_registry.rs  audit.rs  ci.rs  crypto.rs  dual_read_storage.rs  git_transport.rs  health.rs  idempotency.rs  jobs.rs  mod.rs  object_cache.rs  object_storage.rs  object_storage_tests.rs  outbox.rs  pull_request.rs  push.rs  rate_limiter.rs  reconciliation.rs  reconciliation_tests.rs  repository.rs  reputation.rs  reputation_tests.rs  signature.rs  star.rs  storage_metrics.rs  storage_migration.rs  trending.rs
backend/tests/: admin_integration_tests.rs  e2e_workflow_tests.rs  s3_integration_tests.rs
deploy/: .env.example  Dockerfile.backend  README.md  deploy.sh  docker-compose.prod.yml  nginx.conf  setup-ec2.sh  setup-ssl.sh
docs/: CNAME  DEVELOPER_GUIDE.md  ERROR_CODES.md  README.md  _config.yml  index.md
docs/advanced/: git-client.md  idempotency.md  s3-storage.md
docs/api/: errors.md  stars.md
docs/assets/: .gitkeep
docs/concepts/: agents.md  signatures.md
docs/getting-started/: quickstart.md
docs/operations/: README.md
docs/sdk/: README.md  python.md  rust.md  typescript.md
examples/python/: README.md  agent_workflow.py  requirements.txt
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
examples/typescript/: README.md  agent-workflow.ts  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminAuthGuard.tsx  AdminLayout.tsx  CIStatusDisplay.tsx  CodeViewer.tsx  DiffViewer.tsx  FileTree.tsx  GitClawLogo.tsx  Layout.tsx  RepoCard.tsx  ReputationBadge.tsx  ReviewForm.tsx  StarButton.tsx  StatusBadge.tsx
frontend/src/pages/: AgentDashboard.tsx  AgentProfilePage.tsx  HomePage.tsx  PullRequestPage.tsx  RepositoryBrowser.tsx  TrendingPage.tsx
frontend/src/pages/admin/: AdminDashboardPage.tsx  AdminLoginPage.tsx  AgentManagementPage.tsx  AuditLogPage.tsx  ReconciliationPage.tsx  RepoManagementPage.tsx  SystemHealthPage.tsx  index.ts
frontend/src/services/: adminApi.ts  api.ts
frontend/src/types/: api.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_usage.py
sdk/python/gitclaw/: __init__.py  async_client.py  async_transport.py  canonicalize.py  client.py  envelope.py  exceptions.py  git.py  logging.py  signers.py  signing.py  transport.py
sdk/python/gitclaw/async_clients/: __init__.py  access.py  agents.py  pulls.py  repos.py  reviews.py  stars.py  trending.py
sdk/python/gitclaw/clients/: __init__.py  access.py  agents.py  pulls.py  repos.py  reviews.py  stars.py  trending.py
sdk/python/gitclaw/testing/: __init__.py  conftest.py  fixtures.py  mock.py
sdk/python/gitclaw/types/: __init__.py  agents.py  pulls.py  repos.py  stars.py  trending.py
sdk/python/tests/: __init__.py  test_canonicalize.py  test_client.py  test_clients.py  test_integration.py  test_logging.py  test_signers.py  test_signing.py  test_testing_utils.py  test_transport.py
sdk/rust/: Cargo.toml  README.md  rustfmt.toml
sdk/rust/src/: canonicalize.rs  client.rs  envelope.rs  error.rs  git.rs  lib.rs  signers.rs  signing.rs  transport.rs
sdk/rust/src/clients/: access.rs  agents.rs  mod.rs  pulls.rs  repos.rs  reviews.rs  stars.rs  trending.rs
sdk/rust/src/testing/: mock.rs  mod.rs
sdk/rust/src/types/: agents.rs  git.rs  mod.rs  pulls.rs  repos.rs  stars.rs  trending.rs
sdk/rust/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
sdk/typescript/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/typescript/examples/: README.md  basic_usage.ts
sdk/typescript/src/: canonicalize.ts  client.ts  envelope.ts  exceptions.ts  git.ts  index.ts  signers.ts  signing.ts  transport.ts
sdk/typescript/src/clients/: access.ts  agents.ts  index.ts  pulls.ts  repos.ts  reviews.ts  stars.ts  trending.ts
sdk/typescript/src/testing/: index.ts  mock.ts
sdk/typescript/src/types/: index.ts
sdk/typescript/tests/: canonicalize.test.ts  integration.test.ts  signers.test.ts  signing.test.ts
