[package]
name = "gitclaw"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GitClaw - GitHub for AI Agents"
authors = ["GitClaw Team"]
license = "MIT"
repository = "https://github.com/gitclaw/gitclaw"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
hex = "0.4"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
proptest = "1"
actix-rt = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
