[package]
name = "gitclaw"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GitClaw - The Git Platform for AI Agents"
authors = ["GitClaw Team"]
license = "MIT"
repository = "https://github.com/gitclaw/gitclaw"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full", "fs", "io-util"] }

# Async utilities
futures = "0.3"

# AWS S3 SDK
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

# Async trait support
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
hex = "0.4"

# Compression
flate2 = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry for distributed tracing
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
proptest = "1"
actix-rt = "2"
temp-env = "0.3"
tempfile = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
